switched to monospace font to avoid shifting in counter

--- a/src/components/css/ParentCell.css
+++ b/src/components/css/ParentCell.css
@@ -1,6 +1,6 @@
 .parent-cell {
     text-align: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .child-containter {
